create github pages

--- a/Index.html
+++ b/Index.html
@@ -37,8 +37,8 @@
                 <div class="mbr-table-cell">
 
                     <div class="navbar-brand">
-                        <a href="mailto:petri.taskinen@wmail.fi" class="navbar-logo"><img src="assets/images/omakuva-web-132x128.png" alt="Petri Taskinen" title="Designer Petri Taskinen"></a>
-                        <a class="navbar-caption text-primary" href="mailto: petri.taskinen@wmail.fi"><span class="mbri-website-theme mbr-iconfont mbr-iconfont-btn"></span>Petri Taskinen</a>
+                        <a href="mailto:petri.taskinen@wmail.fi" class="navbar-logo"><img src="assets/images/omakuva-web-133x128.png" alt="Petri Taskinen" title="Designer Petri Taskinen"></a>
+                        <a class="navbar-caption text-white" href="mailto: petri.taskinen@wmail.fi"><span class="mbri-website-theme mbr-iconfont mbr-iconfont-btn"></span>Petri Taskinen</a>
                     </div>
 
                 </div>
@@ -61,7 +61,7 @@
 
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">https://mobirise.com/</a></section><section class="mbr-section mbr-parallax-background mbr-after-navbar" id="msg-box5-2" style="background-image: url(assets/images/jumbotron.jpg); padding-top: 80px; padding-bottom: 0px;">
+<section class="engine"><a rel="external" href="https://mobirise.com">Web Page Builder</a></section><section class="mbr-section mbr-parallax-background mbr-after-navbar" id="msg-box5-2" style="background-image: url(assets/images/jumbotron.jpg); padding-top: 80px; padding-bottom: 0px;">
 
     <div class="mbr-overlay" style="opacity: 0.1; background-color: rgb(226, 80, 65);">
     </div>
@@ -274,7 +274,7 @@
 
                     <form action="https://mobirise.com/" method="post" data-form-title="Ota yhteyttä">
 
-                        <input type="hidden" value="rWtaKJEsushJIHFpqhxy01rkIFTF4hOapbo1ywk6VRGYo5SIaAWaSvRRDpIgFeMHtQs1c7Q9fvgR5oxm9frijb12DTHfVrVlyBEk2zXAo17gmtqxl6gV/OcWc+Mf1b6f" data-form-email="true">
+                        <input type="hidden" value="52CtSMIXERloJyKrXs0FJNhUUZvqJfHNGsHQ0Lu1uUwB1NKlhp8xiwUxAbRyROoN+yL8fH8ka1vJ8C9pCupQdFWePRokMdthPpWp+reeXsRWkHfMmZjHnGHERAxBEg+j" data-form-email="true">
 
                         <div class="row row-sm-offset">
 
@@ -320,7 +320,7 @@
     <div class="container">
         <div class="row">
             <div class="mbr-footer-content col-xs-12 col-md-3">
-                <div><img src="assets/images/omakuva-web-128x123.png"></div>
+                <div><span class="mbri-user mbr-iconfont mbr-iconfont-contacts1"></span></div>
             </div>
             <div class="mbr-footer-content col-xs-12 col-md-3">
                 <p>YHTEYS:<br><br>Petri Taskinen<br>Perhekunnantie 26 G 50<br><span style="font-size: 0.875rem; line-height: 1.5;">00430 Helsinki</span><br></p>
