--- a/kuvat.html
+++ b/kuvat.html
@@ -36,7 +36,7 @@
 
                     <div class="navbar-brand">
                         <a href="mailto:petri.taskinen@wmail.fi" class="navbar-logo"><img src="assets/images/omakuva-web-132x128.png" alt="Petri Taskinen" title="Designer Petri Taskinen"></a>
-                        <a class="navbar-caption text-primary" href="mailto: petri.taskinen@wmail.fi"><span class="mbri-website-theme mbr-iconfont mbr-iconfont-btn"></span>Petri Taskinen</a>
+                        <a class="navbar-caption text-white" href="mailto: petri.taskinen@wmail.fi"><span class="mbri-website-theme mbr-iconfont mbr-iconfont-btn"></span>Petri Taskinen</a>
                     </div>
 
                 </div>
@@ -59,7 +59,7 @@
 
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">Mobirise Web Maker</a></section><footer class="mbr-small-footer mbr-section mbr-section-nopadding mbr-after-navbar" id="footer1-2" style="background-color: rgb(50, 50, 50); padding-top: 1.75rem; padding-bottom: 1.75rem;">
+<section class="engine"><a rel="external" href="https://mobirise.com">Site Maker</a></section><footer class="mbr-small-footer mbr-section mbr-section-nopadding mbr-after-navbar" id="footer1-2" style="background-color: rgb(50, 50, 50); padding-top: 1.75rem; padding-bottom: 1.75rem;">
     
     <div class="container">
         <p class="text-xs-center">Copyright (c) 2016 Mobirise.</p>
