--- a/Index.html
+++ b/Index.html
@@ -44,11 +44,11 @@
                 </div>
                 <div class="mbr-table-cell">
 
-                    <button class="navbar-toggler pull-xs-right hidden-md-up" type="button" data-toggle="collapse" data-target="#exCollapsingNavbar">
+                    <button class="navbar-toggler pull-xs-right" type="button" data-toggle="collapse" data-target="#exCollapsingNavbar">
                         <div class="hamburger-icon"></div>
                     </button>
 
-                    <ul class="nav-dropdown collapse pull-xs-right nav navbar-nav navbar-toggleable-sm" id="exCollapsingNavbar"><li class="nav-item dropdown open"><a class="nav-link link dropdown-toggle" href="https://mobirise.com/" data-toggle="dropdown-submenu" aria-expanded="true"><span class="socicon socicon-buffer mbr-iconfont mbr-iconfont-btn"></span>MENU</a><div class="dropdown-menu"><a class="dropdown-item" href="Index.html#gallery2-3">Portfolio</a></div></li></ul>
+                    <ul class="nav-dropdown collapse pull-xs-right nav navbar-nav navbar-toggleable-xl" id="exCollapsingNavbar"><li class="nav-item dropdown"><a class="nav-link link" href="#top" aria-expanded="false">ALKUUN</a></li><li class="nav-item"><a class="nav-link link" href="#top" aria-expanded="false">PORTFOLIO</a></li><li class="nav-item"><a class="nav-link link" href="Index.html#contacts1-6" aria-expanded="false">OTA YHTEYTTÄ</a></li></ul>
                     <button hidden="" class="navbar-toggler navbar-close" type="button" data-toggle="collapse" data-target="#exCollapsingNavbar">
                         <div class="close-icon"></div>
                     </button>
@@ -61,7 +61,7 @@
 
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">Web Page Builder</a></section><section class="mbr-section mbr-parallax-background mbr-after-navbar" id="msg-box5-2" style="background-image: url(assets/images/jumbotron.jpg); padding-top: 80px; padding-bottom: 0px;">
+<section class="engine"><a rel="external" href="https://mobirise.com">mobirise.com</a></section><section class="mbr-section mbr-parallax-background mbr-after-navbar" id="msg-box5-2" style="background-image: url(assets/images/jumbotron.jpg); padding-top: 80px; padding-bottom: 0px;">
 
     <div class="mbr-overlay" style="opacity: 0.1; background-color: rgb(226, 80, 65);">
     </div>
@@ -99,7 +99,7 @@
         <div class="row">
             <div class="col-md-8 col-md-offset-2 text-xs-center">
                 <h3 class="mbr-section-title display-2">PORTFOLIO</h3>
-                <div class="lead"><p>Portofolio-osuus vielä työn alla.....</p><p>Alla olevat kuvat ovat vain välaikaisia esimerkkejä</p></div>
+                <div class="lead"><p>Portofolio-osuus vielä työn alla.....</p><p>Alla olevat kuvat ovat vain väliaikaisia esimerkkejä</p></div>
                 
             </div>
         </div>
@@ -274,7 +274,7 @@
 
                     <form action="https://mobirise.com/" method="post" data-form-title="Ota yhteyttä">
 
-                        <input type="hidden" value="52CtSMIXERloJyKrXs0FJNhUUZvqJfHNGsHQ0Lu1uUwB1NKlhp8xiwUxAbRyROoN+yL8fH8ka1vJ8C9pCupQdFWePRokMdthPpWp+reeXsRWkHfMmZjHnGHERAxBEg+j" data-form-email="true">
+                        <input type="hidden" value="1t66VCzHG1Vnhvl9Jai/+Tvx6Nn20KNZMW5R3ImzRwjBqPUvcUx6Zo4WmNOZGmnOk5pgtWC1tOQfi9Et4IY8Dc6k+5qMqqgX8eAYYl6FblfC9swqKR8XmRWDoG1yTj+i" data-form-email="true">
 
                         <div class="row row-sm-offset">
 
