--- a/kuvat.html
+++ b/kuvat.html
@@ -18,7 +18,6 @@
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
   <link rel="stylesheet" href="assets/dropdown/css/style.css">
   <link rel="stylesheet" href="assets/animate.css/animate.min.css">
-  <link rel="stylesheet" href="assets/socicon/css/styles.css">
   <link rel="stylesheet" href="assets/theme/css/style.css">
   <link rel="stylesheet" href="assets/mobirise/css/mbr-additional.css" type="text/css">
   
@@ -42,11 +41,11 @@
                 </div>
                 <div class="mbr-table-cell">
 
-                    <button class="navbar-toggler pull-xs-right hidden-md-up" type="button" data-toggle="collapse" data-target="#exCollapsingNavbar">
+                    <button class="navbar-toggler pull-xs-right" type="button" data-toggle="collapse" data-target="#exCollapsingNavbar">
                         <div class="hamburger-icon"></div>
                     </button>
 
-                    <ul class="nav-dropdown collapse pull-xs-right nav navbar-nav navbar-toggleable-sm" id="exCollapsingNavbar"><li class="nav-item dropdown open"><a class="nav-link link dropdown-toggle" href="https://mobirise.com/" data-toggle="dropdown-submenu" aria-expanded="true"><span class="socicon socicon-buffer mbr-iconfont mbr-iconfont-btn"></span>MENU</a><div class="dropdown-menu"><a class="dropdown-item" href="Index.html#gallery2-3">Portfolio</a></div></li></ul>
+                    <ul class="nav-dropdown collapse pull-xs-right nav navbar-nav navbar-toggleable-xl" id="exCollapsingNavbar"><li class="nav-item dropdown"><a class="nav-link link" href="#top" aria-expanded="false">ALKUUN</a></li><li class="nav-item"><a class="nav-link link" href="#top" aria-expanded="false">PORTFOLIO</a></li><li class="nav-item"><a class="nav-link link" href="Index.html#contacts1-6" aria-expanded="false">OTA YHTEYTTÄ</a></li></ul>
                     <button hidden="" class="navbar-toggler navbar-close" type="button" data-toggle="collapse" data-target="#exCollapsingNavbar">
                         <div class="close-icon"></div>
                     </button>
@@ -59,7 +58,7 @@
 
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">Site Maker</a></section><footer class="mbr-small-footer mbr-section mbr-section-nopadding mbr-after-navbar" id="footer1-2" style="background-color: rgb(50, 50, 50); padding-top: 1.75rem; padding-bottom: 1.75rem;">
+<section class="engine"><a rel="external" href="https://mobirise.com">mobirise.com</a></section><footer class="mbr-small-footer mbr-section mbr-section-nopadding mbr-after-navbar" id="footer1-2" style="background-color: rgb(50, 50, 50); padding-top: 1.75rem; padding-bottom: 1.75rem;">
     
     <div class="container">
         <p class="text-xs-center">Copyright (c) 2016 Mobirise.</p>
