create github pages

--- a/Index.html
+++ b/Index.html
@@ -48,7 +48,7 @@
                         <div class="hamburger-icon"></div>
                     </button>
 
-                    <ul class="nav-dropdown collapse pull-xs-right nav navbar-nav navbar-toggleable-xl" id="exCollapsingNavbar"><li class="nav-item dropdown"><a class="nav-link link" href="#top" aria-expanded="false">ALKUUN</a></li><li class="nav-item"><a class="nav-link link" href="#top" aria-expanded="false">PORTFOLIO</a></li><li class="nav-item"><a class="nav-link link" href="Index.html#contacts1-6" aria-expanded="false">OTA YHTEYTTÄ</a></li></ul>
+                    <ul class="nav-dropdown collapse pull-xs-right nav navbar-nav navbar-toggleable-xl" id="exCollapsingNavbar"><li class="nav-item dropdown"><a class="nav-link link" href="#top" aria-expanded="false">ALKUUN</a></li><li class="nav-item"><a class="nav-link link" href="Index.html#gallery2-3" aria-expanded="false">PORTFOLIO</a></li><li class="nav-item"><a class="nav-link link" href="Index.html#contacts1-6" aria-expanded="false">OTA YHTEYTTÄ</a></li></ul>
                     <button hidden="" class="navbar-toggler navbar-close" type="button" data-toggle="collapse" data-target="#exCollapsingNavbar">
                         <div class="close-icon"></div>
                     </button>
@@ -61,7 +61,7 @@
 
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">mobirise.com</a></section><section class="mbr-section mbr-parallax-background mbr-after-navbar" id="msg-box5-2" style="background-image: url(assets/images/jumbotron.jpg); padding-top: 80px; padding-bottom: 0px;">
+<section class="engine"><a rel="external" href="https://mobirise.com">https://mobirise.com/</a></section><section class="mbr-section mbr-parallax-background mbr-after-navbar" id="msg-box5-2" style="background-image: url(assets/images/jumbotron.jpg); padding-top: 80px; padding-bottom: 0px;">
 
     <div class="mbr-overlay" style="opacity: 0.1; background-color: rgb(226, 80, 65);">
     </div>
@@ -274,7 +274,7 @@
 
                     <form action="https://mobirise.com/" method="post" data-form-title="Ota yhteyttä">
 
-                        <input type="hidden" value="1t66VCzHG1Vnhvl9Jai/+Tvx6Nn20KNZMW5R3ImzRwjBqPUvcUx6Zo4WmNOZGmnOk5pgtWC1tOQfi9Et4IY8Dc6k+5qMqqgX8eAYYl6FblfC9swqKR8XmRWDoG1yTj+i" data-form-email="true">
+                        <input type="hidden" value="GWV0wzbiSdlYI3uFmoTIeKQWTp9axXTJfb3nYwFH/V7CE2Bk97Oo4skz7NigZ3z23wLykucgweI2yGHQkmHsN/cRUAsLod1vMRBKdOGViKpy0UByqk5CZw1y80ye35hG" data-form-email="true">
 
                         <div class="row row-sm-offset">
 
