--- a/kuvat.html
+++ b/kuvat.html
@@ -13,7 +13,6 @@
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat:400,700">
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Raleway:100,100i,200,200i,300,300i,400,400i,500,500i,600,600i,700,700i,800,800i,900,900i">
   <link rel="stylesheet" href="assets/bootstrap-material-design-font/css/material.css">
-  <link rel="stylesheet" href="assets/web/assets/mobirise-icons/mobirise-icons.css">
   <link rel="stylesheet" href="assets/tether/tether.min.css">
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
   <link rel="stylesheet" href="assets/dropdown/css/style.css">
@@ -35,7 +34,7 @@
 
                     <div class="navbar-brand">
                         <a href="mailto:petri.taskinen@wmail.fi" class="navbar-logo"><img src="assets/images/omakuva-web-132x128.png" alt="Petri Taskinen" title="Designer Petri Taskinen"></a>
-                        <a class="navbar-caption text-white" href="mailto: petri.taskinen@wmail.fi"><span class="mbri-website-theme mbr-iconfont mbr-iconfont-btn"></span>Petri Taskinen</a>
+                        <a class="navbar-caption text-white" href="#top">PETRI TASKINEN</a>
                     </div>
 
                 </div>
@@ -58,10 +57,10 @@
 
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">Mobirise</a></section><footer class="mbr-small-footer mbr-section mbr-section-nopadding mbr-after-navbar" id="footer1-2" style="background-color: rgb(50, 50, 50); padding-top: 1.75rem; padding-bottom: 1.75rem;">
+<section class="engine"><a rel="external" href="https://mobirise.com">Web Site Builder</a></section><footer class="mbr-small-footer mbr-section mbr-section-nopadding mbr-after-navbar" id="footer1-2" style="background-color: rgb(46, 46, 46); padding-top: 1.75rem; padding-bottom: 1.75rem;">
     
     <div class="container">
-        <p class="text-xs-center">Copyright (c) 2016 Mobirise.</p>
+        <p class="text-xs-center">Copyright (c) 2017 Petri Taskinen</p>
     </div>
 </footer>
 
