--- a/Index.html
+++ b/Index.html
@@ -36,7 +36,7 @@
                 <div class="mbr-table-cell">
 
                     <div class="navbar-brand">
-                        <a href="https://mobirise.com" class="etl-icon icon-layers mbr-iconfont mbr-iconfont-menu navbar-logo"></a>
+                        <a href="#top" class="etl-icon icon-layers mbr-iconfont mbr-iconfont-menu navbar-logo"></a>
                         <a class="navbar-caption text-white" href="#top">PETRI TASKINEN</a>
                     </div>
 
@@ -60,7 +60,7 @@
 
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">Site Generator</a></section><section class="mbr-section mbr-parallax-background mbr-after-navbar" id="msg-box5-2" style="background-image: url(assets/images/jumbotron.jpg); padding-top: 80px; padding-bottom: 0px;">
+<section class="engine"><a rel="external" href="https://mobirise.com">Website Generator</a></section><section class="mbr-section mbr-parallax-background mbr-after-navbar" id="msg-box5-2" style="background-image: url(assets/images/jumbotron.jpg); padding-top: 80px; padding-bottom: 0px;">
 
     <div class="mbr-overlay" style="opacity: 0.1; background-color: rgb(226, 80, 65);">
     </div>
@@ -273,7 +273,7 @@
 
                     <form action="https://mobirise.com/" method="post" data-form-title="Ota yhteyttä">
 
-                        <input type="hidden" value="6BQBKqV7YDidQW+7e1PM8FZDBw6Yt7uxmnv0eZ+NbIu5FMmik0Ewsd0D8hsC4hyObP3Pxf4rRTl9K5HUgsw2P73d6J8JBuewoowI+pHEx/cGxo3nJB6fjYK/y8ITVxSZ" data-form-email="true">
+                        <input type="hidden" value="sHQ6Tb3FXHiOrJdYctcIjClh8+lK4V+rroKQLOc1g9BdDykgpouQVkqi0d4PEQzO5IyIUayNwr0R8pF2XC0+ryuJttpzsO18Q3/iKzZTfs+mRQZzoS9Gnov3n2shSDZv" data-form-email="true">
 
                         <div class="row row-sm-offset">
 
